組織をツリー形式に変更
