# api/src/route/organisations.ts
@@ -1,16 +1,33 @@
 import express from 'express';
 import { AppDataSource } from '../data-source';
 import Organisation from '../model/Organisation';
+import User from '../model/User';
 
 const organisationsRouter = express.Router();
 
 organisationsRouter.get('/organizations', async (_, res) => {
   if (!AppDataSource.isInitialized) await AppDataSource.initialize();
-  const orgs = await AppDataSource.manager.find(Organisation, {
-    where: { super: undefined }, // トップレベル組織のみ取得する
+  const { manager } = AppDataSource;
+  const orgs = await manager.getTreeRepository(Organisation).findTrees({
+    relations: ['boss_role', 'member_role'],
   });
-  console.log(orgs);
-  res.status(200).send(orgs);
+  const users = await manager.find(User);
+  const root = orgs[0];
+  users.forEach((u) => root.sinkUser(u));
+  console.log(root);
+  res.status(200).send(root);
 });
 
 export default organisationsRouter;
+
+// const getRecursiveObj = <K extends string>(
+//   key: K,
+//   child: any,
+//   level: number
+// ): Record<K, any> =>
+//   [...Array(level)].reduce(
+//     (acc) => ({
+//       [key]: acc,
+//     }),
+//     child
+//   );
